--- a/src/main/webapp/websources/pages/login.html
+++ b/src/main/webapp/websources/pages/login.html
@@ -20,24 +20,26 @@
 <body>
 <div class="container">
   <form class="form-signin">
-    <h2 class="form-signin-heading">Please sign in</h2>
-    <label for="inputEmail" class="sr-only">Email address</label>
+    <h2 class="form-signin-heading">请登录</h2>
+    <label for="inputEmail" class="sr-only">邮箱</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <input type="password" id="inputPassword" class="form-control" placeholder="密码" required>
 
     <div class="checkbox">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit" id="login">登录</button>
   </form>
 </div>
 <!-- /container -->
 
 <script src="../javascripts/frame/jquery-2.1.3.min.js"></script>
 <script src="../javascripts/frame/bootstrap.min.js"></script>
+<script src="../javascripts/frame/sha1.js"></script>
+<script src="../javascripts/utils/dataService.js"></script>
 <script src="../javascripts/pages/login.js"></script>
 </body>
 </html>
